# tickets-app

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 44e3167d5fb4_initial.py  49073a23c927_make_assigned_to_mandatory.py
app/: main.py
app/auth/: deps.py  router.py  schemas.py  session.py
app/core/: config.py  router.py
app/db/: session.py
app/notifications/: models.py  repository.py  router.py  schemas.py
app/realtime/: broker.py  events.py  hub.py  router.py
app/tickets/: models.py  repository.py  router.py  schemas.py  storage.py
app/users/: models.py  repository.py  router.py  schemas.py
app/web/: router.py
static/: app.js  index.html  style.css
