[project]
name = "orbidi-fastapi-base"
version = "0.1.0"
description = "FastAPI base app with Google SSO, Postgres, RabbitMQ realtime, Jinja templates, and local storage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "fastapi-sso>=0.17",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "jinja2>=3.1",
  "aio-pika>=9.4",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
  "slowapi>=0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
# B008 is ignored because FastAPI heavily relies on function calls in default arguments (e.g. Depends(), File())
ignore = ["B008"]
